# rust-ray-trace

./: .gitignore  Cargo.toml  README.md
lib/: color.rs  lib.rs
lib/camera/: camera.rs  mod.rs  perspective.rs  traits.rs
lib/common/: intersection.rs  material.rs  mod.rs  ray.rs  scene.rs
lib/geometry/: mod.rs  plane.rs  sphere.rs  traits.rs
lib/illumination/: ambient.rs  mod.rs  point.rs  traits.rs
lib/image/: color.rs  frame.rs  mod.rs
tests/: intergration_tests.rs
tests/camera_test/: mod.rs  perspective_test.rs
tests/common_test/: mod.rs  ray_test.rs
tests/geometry_test/: mod.rs  plane_tests.rs  sphere_tests.rs
tests/image_test/: image_buffer_test.rs  mod.rs
