[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ray_tracer"
path = "lib/lib.rs"

[[bin]]
name = "rust_trace"
path = "bin/main.rs"

[dependencies]
nalgebra = "*"
approx = "0.5.1"